# RestaurantBookings

./: .env.example  .gitignore  CLAUDE.md  README.md  analyze_member.py  analyze_rest.py  main.py  member_info.txt  note.md  pyproject.toml  rest_info.txt
configs/: etl.yaml  random_forest.yaml  raw_data_schema.py  raw_data_schema.yaml  xgboost.yaml
deployment/: .amlignore  README.md  conda.yaml  deploy.ps1  deploy.sh  deployment.yml  endpoint.yml  example_input.json  export_bundle.py  schemas.py  score.py  test_score.py
docs/: RestaurantBooking.postman_collection.json  feature_decisions.md  feature_engineering_definitions.md  implementation_plan_training.md
notebooks/: 01_cleaning.ipynb  01_eda_raw.ipynb  02_integration.ipynb  03_eda.ipynb  integration.ipynb  random_forest.ipynb  regression.ipynb  xgboost.ipynb  xgboost_spilt_model.ipynb
reports/: Restaurant1_eda.html  raw_member_data_profile.html  raw_order_data_profile.html
src/common/: model_utils.py
src/etl/: _cleaning_utils.py  _config.py  _features_utils.py  _integration_utils.py  _utils.py  data_cleaning.py  run_cleaning.py  run_features.py  run_integration.py  step0_run_download.py  step1_run_cleaning.py  step2_run_integration.py  step3_run_features.py  utils.py
src/exploration/: README.md  inference.py  train_random_forest.py  train_regression.py  train_xgboost.py
src/models/: train_random_forest.py  train_regression.py  train_xgboost.py  train_xgboost_half_hour.py  xgboost_inference.py
src/preprocessing/: common.py  regression.py
src/xgboost/: __init__.py  inference.py  preprocessing.py  (+1 more)
(+1 files in other folders)
