[project]
name = "restaurantbookings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "mlflow>=3.10.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.1",
    "ydata-profiling>=4.18.1",
]
